@@ -1,7 +1,7 @@
 /* libpq.c
 
    Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009,
-     2010, 2011, 2012, 2013 Thien-Thi Nguyen
+     2010, 2011, 2012, 2013, 2014 Thien-Thi Nguyen
    Portions Copyright (C) 1999, 2000 Ian Grant
 
    This file is part of Guile-PG.
@@ -2467,145 +2467,6 @@ done; or @code{-2} to mean an error occurred.
   PQfreemem (newbuf);
 
   return NUM_INT (rv);
-#undef FUNC_NAME
-}
-
-PRIMPROC
-(pg_getline, "pg-getline", 1, 0, 0,
- (SCM conn),
- doc: /***********
-Read a line from @var{conn} on which a @code{COPY <table> TO
-STDOUT} has been issued.  Return a string from the connection.
-A returned string consisting of a backslash followed by a full
-stop signifies an end-of-copy marker.
-
-This procedure is obsolete and @strong{WILL BE REMOVED}
-by 2013-12-31.  */)
-{
-#define FUNC_NAME s_pg_getline
-  PGconn *dbconn;
-  char buf[BUF_LEN];
-  int ret = 1;
-  SCM box = PCHAIN (SCM_UNSPECIFIED);
-  SCM tp = box;
-
-  VALIDATE_CONNECTION_UNBOX_DBCONN (1, conn, dbconn);
-  while (ret != 0 && ret != EOF)
-    {
-      NOINTS ();
-      ret = PQgetline (dbconn, buf, BUF_LEN);
-      INTSOK ();
-      SETCDR (tp, CONS (STRING (buf), SCM_EOL));
-      tp = CDR (tp);
-    }
-  return scm_string_append (CDR (box));
-#undef FUNC_NAME
-}
-
-PRIMPROC
-(pg_getlineasync, "pg-getlineasync", 2, 1, 0,
- (SCM conn, SCM buf, SCM tickle),
- doc: /***********
-Read a line from @var{conn} on which a @code{COPY <table> TO
-STDOUT} has been issued, into @var{buf} (a string).
-Return @code{-1} to mean end-of-copy marker recognized, or a number
-(possibly zero) indicating how many bytes of data were read.
-The returned data may contain at most one newline (in the last
-byte position).
-Optional arg @var{tickle} non-@code{#f} means to do a
-``consume input'' operation prior to the read.
-
-This procedure is obsolete and @strong{WILL BE REMOVED}
-by 2013-12-31.  */)
-{
-#define FUNC_NAME s_pg_getlineasync
-  PGconn *dbconn;
-  int rv;
-
-  VALIDATE_CONNECTION_UNBOX_DBCONN (1, conn, dbconn);
-  ASSERT_STRING (2, buf);
-
-  if (TRUE_ENOUGH (tickle))
-    /* We don't care if there was an error consuming input; caller can use
-       ‘pg_error_message’ to find out afterwards, or simply avoid tickling in
-       the first place.  */
-    PQconsumeInput (dbconn);
-
-#if GI_LEVEL_NOT_YET_1_8
-  rv = PQgetlineAsync (dbconn, SCM_ROCHARS (buf), SCM_ROLENGTH (buf));
-#else  /* !GI_LEVEL_NOT_YET_1_8 */
-  /* Fill a temporary C buffer then copy into the Scheme string.
-     Totally gross!  */
-  {
-    size_t sz = scm_c_string_length (buf);
-    char *cbuf = malloc (sz);
-
-    if (! cbuf)
-      SYSTEM_ERROR ();
-    rv = PQgetlineAsync (dbconn, cbuf, sz);
-    while (sz--)
-      scm_c_string_set_x (buf, sz, CHARACTER (cbuf[sz]));
-    free (cbuf);
-  }
-#endif /* !GI_LEVEL_NOT_YET_1_8 */
-
-  return NUM_INT (rv);
-#undef FUNC_NAME
-}
-
-PRIMPROC
-(pg_putline, "pg-putline", 2, 0, 0,
- (SCM conn, SCM str),
- doc: /***********
-Write a line to the connection on which a @code{COPY <table>
-FROM STDIN} has been issued.  The lines written should include
-the final newline characters.  The last line should be a
-backslash, followed by a @samp{.} (full-stop).  After this, the
-@code{pg-endcopy} procedure should be called for this
-connection before any further @code{pg-exec} call is made.
-Return @code{#t} if successful.
-
-This procedure is obsolete and @strong{WILL BE REMOVED}
-by 2013-12-31.  */)
-{
-#define FUNC_NAME s_pg_putline
-  PGconn *dbconn;
-  int status;
-  range_t cstr;
-
-  VALIDATE_CONNECTION_UNBOX_DBCONN (1, conn, dbconn);
-  ASSERT_STRING (2, str);
-  NOINTS ();
-  FINANGLE_RAW (str);
-  status = PQputnbytes (dbconn, RS (str), RLEN (str));
-  UNFINANGLE (str);
-  INTSOK ();
-  return BOOLEAN (! status);
-#undef FUNC_NAME
-}
-
-PRIMPROC
-(pg_endcopy, "pg-endcopy", 1, 0, 0,
- (SCM conn),
- doc: /***********
-Resynchronize with the backend process on @var{conn}.  This procedure
-must be called after the last line of a table has been
-transferred using @code{pg-getline}, @code{pg-getlineasync}
-or @code{pg-putline}.  Return @code{#t} if successful.
-
-This procedure is obsolete and @strong{WILL BE REMOVED}
-by 2013-12-31.  */)
-{
-#define FUNC_NAME s_pg_endcopy
-  PGconn *dbconn;
-  int ret;
-
-  VALIDATE_CONNECTION_UNBOX_DBCONN (1, conn, dbconn);
-  NOINTS ();
-  ret = PQendcopy (dbconn);
-  INTSOK ();
-
-  return BOOLEAN (! ret);
 #undef FUNC_NAME
 }
 
