@@ -1,3 +1,10 @@
+2014-01-08  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	Drop procs: pg-{getline,getlineasync,putline,endcopy}
+
+	* libpq.c (pg_getline, pg_getlineasync, pg_putline)
+	(pg_endcopy): Delete PRIMPROCs.
+
 2013-03-14  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Release: 0.46 (tag v0.46)
